# wb

./: .gitignore  15.10.2025_14.22_Общие характеристики одним файлом.xlsx  docker-compose.yml  generate.py  ingest.py  main.py  pyproject.toml  run.bat  run_pipeline.py  scheduler.py  test.py
app/: alembic.ini  pipeline.py  scheduler.py
app/alembic/: env.py
app/alembic/versions/: 2025_10_14_1806-e7f87e0a6be6_create_tables.py  2025_10_20_1635-77de3974db44_create_product_name_collumn.py
app/clients/: __init__.py  catalog.py  genai_client.py  wb_client.py
app/core/: config.py  logger.py
app/db/: __init__.py  base.py  enums.py  feedback.py  question.py  session.py
app/db/mixins/: __init__.py  time_stamp_mixins.py  wb_mixins.py
app/schemas/: gemini_schemas.py  wb_schemas.py
app/utils/: __init__.py  case_converter.py  rate_limiter.py  requeue_failed.py
app/workers/: generate.py  ingest.py  send.py
